<resources>
    <string name="app_name">BookingNow</string>

    <string name="str_submitOTP">Gửi OTP</string>


    //String Add New
    <string name="str_send_OTP">BookingNow</string>
    <string name="str_xac_thuc_OTP">BookingNow</string>
    <string name="str_xac_thuc_thong_tin">Xác thực thông tin</string>
    <string name="str_ho_va_ten">Họ và tên</string>
    <string name="str_dia_chi">Địa chỉ</string>
    <string name="str_so_dien_thoai">Số điện thoại</string>
    <string name="str_luu">Lưu</string>
    <string name="str_thoat">Thoát</string>
    <string name="str_email">Email</string>
    <string name="str_Password">Password</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="str_dang_nhap">Đăng nhập</string>
    <string name="str_dang_ky">Đăng ký</string>
    <string name="str_chua_co_tai_khoan">Chưa có tài khoản?</string>
    <string name="str_dang_xuat">Đăng xuất</string>
    <string name="str_demo_email">Your Email</string>


    <string name="str_name_demo">Nhập tên</string>
    <string name="str_list_stadium">Danh sách sân</string>
    <string name="str_my_chat_box">My chat box</string>


</resources>