<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".SignUpActivityWithEmail">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_dang_ky"
        android:textSize="40sp"
        android:fontFamily="@font/avo"
        android:textColor="@color/main_green"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/str_email"
        android:background="@drawable/border_color_textbox"
        android:textSize="20sp"
        android:gravity="center"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:background="@drawable/border_color_textbox"
        android:id="@+id/edt_password"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:hint="@string/str_Password"
        android:textSize="20sp"
        android:gravity="center"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:textColor="@color/black"
        />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_sign_up"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:fontFamily="@font/avo"
        android:backgroundTint="@color/main_green"
        />



</LinearLayout>